# Discounted-Udemy-Course-Enroller

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  setup.sh
assets/Courses/: 2026-02-08--17-21.txt
duce/: __init__.py  cli.py  main.py
